--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@tailwindcss/forms": "^0.5.10",
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
-    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "next": "15.3.0-canary.18",
     "next-auth": "5.0.0-beta.25",
@@ -31,5 +30,10 @@
     "@types/react-dom": "19.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.2.3"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "bcrypt"
+    ]
   }
 }
